fix: commit missing customer auth files to fix vercel build
